fix banner, about-me text with pic, aligned arrow down

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   font-family: 'Questrial', sans-serif;
   height: 100vh;
   font-size: 1.1em;
+
 }
 
 .short-decorative-panel {
@@ -30,12 +31,13 @@ body {
 }
 
 .positioned-text {
-  padding-top: 10%;
   margin: 7%;
 /*  position: relative;
   top: 30%;
   transform: translateY(-50%);*/
 }
+
+
 
 .blog-title h1, .contact-title h1, .projects-title h1, .about-title h1 {
   display: inline-block;
@@ -229,6 +231,10 @@ body {
   position: absolute;
 }
 
+.blog-down {
+  top: 190px;
+}
+
 
 /*---------- about section----------*/
 
@@ -243,6 +249,10 @@ body {
     color: #4A4949;
 }
 
+.about-content img {
+  text-align: center;
+}
+
 /*.about-title h1 {
   display: inline-block;
   vertical-align: middle;
@@ -251,6 +261,12 @@ body {
   background: rgba(54, 25, 25, .9)
   padding: 2%;
 }*/
+
+#summary-header {
+  margin-top: 7%;
+  margin-bottom: 7%;
+}
+
 
 .fa-info-circle {
   color: #4A4949;
@@ -300,6 +316,9 @@ body {
   background-size: 20%;
 }
 
+.blog-text {
+  margin-top: 22%;
+}
 
 
 /*contact*/
